praticando css e html

--- a/index.html
+++ b/index.html
@@ -3,27 +3,33 @@
     <head lang="pt-br">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, inicial-scale=1.0">
+        <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
         <link href="css/style.css" rel="stylesheet">
-        <title>Um Belo Site</title>
+        
+        <title>Dev Woman</title>
     </head>
 
     <body>
         <header>
             <nav class="menu">
-                <a href="" class="logo">LOGO</a>
+                <a href="" class="logo"><span class="material-icons">code</span></a>
 
                 <ul>
                     <li><a href="" class="ativo">Home</a></li>
-                    <li><a href="">Serviços</a></li>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Contato</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
                 </ul>
             </nav><!-- Menu -->
 
             <section class="principal">
-                <h2>Desenvolvedor Nº1</h2>
+                <h2>Dev Woman</h2>
                 <div class="links">
-                    <a href="">Inscreva-se</a>
+                    <a href="">Sign up</a> <br />
+                </div>
+
+                <div class="conta">Already have an account?
+                    <a class="links" href=""><strong>Sign in</strong></a>
                 </div>
 
             </section><!-- Principal -->
